--- a/style.css
+++ b/style.css
@@ -501,3 +501,14 @@ body.night-mode .mode-toggle, .mode-toggle:hover {
   justify-content: center; /* Pastikan konten tetap terpusat */
   align-items: center; /* Menjaga ikon tetap terpusat */
 }
+
+.logo-icon img {
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.logo-icon img:hover {
+  filter: drop-shadow(0 0 10px rgba(0, 123, 255, 0.8)) 
+          drop-shadow(0 0 20px rgba(0, 123, 255, 0.6)) 
+          drop-shadow(0 0 30px rgba(0, 123, 255, 0.4));
+          transform: scale(1.1);
+}
